fixing leftwrap div

--- a/style.css
+++ b/style.css
@@ -153,6 +153,7 @@ header p {
 	margin-right: 20px;
 	display: inline-block;
 	vertical-align: top;
+	min-width: 250px;
 }
 
 .locationjoin {
